# black

./: ProblemTest - Portfolio.csv  ProblemTest - Portfolio2.csv  ProblemTest - VCV Matrix.csv  ProblemTest - Views.csv  ProblemTest.xlsx  portfolio_views  portfolio_views.py  pyproject.toml  setup.py  test_script.py
analytics/: portfolio_views.py
dashboard/: app.py
src/analytics/: exceptions.py  portfolio_optimization.py  portfolio_types.py  portfolio_views.py
src/kevin/: portfolio_views2.py
src/utils/: strong_types.py
